--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-stripe-checkout": "^2.6.3",
-    "stripe": "^8.30.0"
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "stripe": "^8.30.0",
+    "thunk": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
