--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "stripe": "^8.30.0",
     "thunk": "0.0.1"
   },
