revert changes from gh deployment

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "basket_front_end",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://tdonovan79.github.io/basket_front_end/",
+  "private": true
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -25,9 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
