--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "basket_front_end",
   "version": "0.1.0",
-  "private": true
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
