--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "basket_front_end",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tdonovan79.github.io/basket_front_end",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,7 +17,6 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
     "stripe": "^8.30.0",
     "thunk": "0.0.1"
   },
@@ -24,6 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
